New versioning system
Automatically add commit hash and number

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -181,3 +181,32 @@ IF(TIFF_FOUND)
         TARGET_LINK_LIBRARIES(distributions_data ${TIFF_LIBRARIES})
     ENDIF(GNUPLOT_FOUND)
 ENDIF(TIFF_FOUND)
+
+EXECUTE_PROCESS(
+    COMMAND git rev-parse --abbrev-ref HEAD
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    RESULT_VARIABLE GIT_BRANCH_RETCODE
+    OUTPUT_VARIABLE GIT_BRANCH
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+EXECUTE_PROCESS(
+    COMMAND git rev-parse --short HEAD
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    RESULT_VARIABLE GIT_COMMIT_HASH_RETCODE
+    OUTPUT_VARIABLE GIT_COMMIT_HASH
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+EXECUTE_PROCESS(
+    COMMAND git rev-list --count HEAD
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    RESULT_VARIABLE GIT_COMMIT_NO_RETCODE
+    OUTPUT_VARIABLE GIT_COMMIT_NO
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+IF(${GIT_BRANCH_RETCODE} STREQUAL "0" AND ${GIT_COMMIT_HASH_RETCODE} STREQUAL "0" AND ${GIT_COMMIT_NO_RETCODE} STREQUAL "0")
+    SET_TARGET_PROPERTIES(spectre-full PROPERTIES COMPILE_FLAGS " -DGIT_BRANCH=\\\"${GIT_BRANCH}\\\" -DGIT_COMMIT_HASH=\\\"${GIT_COMMIT_HASH}\\\" -DGIT_COMMIT_NO=\\\"${GIT_COMMIT_NO}\\\" ")
+    SET_TARGET_PROPERTIES(spectre-rgb PROPERTIES COMPILE_FLAGS " -DGIT_BRANCH=\\\"${GIT_BRANCH}\\\" -DGIT_COMMIT_HASH=\\\"${GIT_COMMIT_HASH}\\\" -DGIT_COMMIT_NO=\\\"${GIT_COMMIT_NO}\\\" ")
+ENDIF()
