Changed retval in ImageMap
Conversion from uint32_t to ColorRGB is left to the TextureImage class (so now ImageMap is channel indipendent and returns just the found value).
Tests have been updated but requires some care because now that integers are used, there are some rounding errors (expected 161, found 160) that needs to be corrected

--- a/visualstudio/tests.vcxproj
+++ b/visualstudio/tests.vcxproj
@@ -117,6 +117,7 @@
     <ClCompile Include="..\src\utility\utility.cpp" />
     <ClCompile Include="..\src\utility\wellrng.cpp" />
     <ClCompile Include="..\tests\unit-testing\aabb_tests.cpp" />
+    <ClCompile Include="..\tests\unit-testing\array2d_tests.cpp" />
     <ClCompile Include="..\tests\unit-testing\asset_tests.cpp" />
     <ClCompile Include="..\tests\unit-testing\box_tests.cpp" />
     <ClCompile Include="..\tests\unit-testing\camera_tests.cpp" />
@@ -200,6 +201,7 @@
     <ClInclude Include="..\src\textures\texture_image.hpp" />
     <ClInclude Include="..\src\textures\texture_library.hpp" />
     <ClInclude Include="..\src\textures\texture_uniform.hpp" />
+    <ClInclude Include="..\src\utility\array2D.hpp" />
     <ClInclude Include="..\src\utility\color.hpp" />
     <ClInclude Include="..\src\utility\console.hpp" />
     <ClInclude Include="..\src\utility\file.hpp" />
