Resolved some serious endianness problems
texels were forced to be 0xBBGGRRAA, but the struct accessing them
within the union didn't take into account the endianness

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,10 @@ TEST_BIG_ENDIAN(IS_BIG_ENDIAN)
 IF(IS_BIG_ENDIAN)
     SET_PROPERTY(SOURCE src/utility/imageio/imageio.c APPEND_STRING PROPERTY
                  COMPILE_FLAGS " -DIS_BIG_ENDIAN ")
+    SET_PROPERTY(SOURCE src/textures/image_map.cpp APPEND_STRING PROPERTY
+                 COMPILE_FLAGS " -DIS_BIG_ENDIAN ")
+    SET_PROPERTY(SOURCE src/textures/texture_image.cpp APPEND_STRING PROPERTY
+                 COMPILE_FLAGS " -DIS_BIG_ENDIAN ")
 ENDIF()
 
 #CORE EXECUTABLES
