Fixed old tests
Changed some Doxygen settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,11 @@ FIND_PACKAGE(Threads REQUIRED)
 FIND_PACKAGE(Doxygen)
 IF(DOXYGEN_FOUND)
     CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/docs/Doxyfile ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
-    ADD_CUSTOM_TARGET(doc ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile ${CMAKE_CURRENT_SOURCE_DIR}/src/ ${CMAKE_CURRENT_BINARY_DIR})
+    IF(DOXYGEN_DOT_FOUND)
+        ADD_CUSTOM_TARGET(doc ${CMAKE_COMMAND} -E env DOXYGEN_DOT=YES ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile ${CMAKE_CURRENT_SOURCE_DIR}/src/ ${CMAKE_CURRENT_BINARY_DIR})
+    ELSE(DOXYGEN_DOT_FOUND)
+        ADD_CUSTOM_TARGET(doc ${CMAKE_COMMAND} -E env DOXYGEN_DOT=NO ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile ${CMAKE_CURRENT_SOURCE_DIR}/src/ ${CMAKE_CURRENT_BINARY_DIR})
+    ENDIF(DOXYGEN_DOT_FOUND)
 ENDIF(DOXYGEN_FOUND)
 
 IF(NOT WIN32)
