--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ IF(MSVC)
     SET(CMAKE_C_FLAGS_RELEASE "/O2 /GR- /GS- /GL /Gw /Gy /MT /LTCG /w /DNDEBUG")
     SET(CMAKE_CXX_FLAGS_RELEASE ${CMAKE_C_FLAGS_RELEASE})
 ELSE()
-    SET(CMAKE_C_FLAGS_DEBUG "-O0 -pipe -fstack-protector -g -Wall -Wextra -Wpedantic -DDEBUG")
+    SET(CMAKE_C_FLAGS_DEBUG "-O0 -pipe -fstack-protector -g -Wall -Wextra -Wpedantic -DDEBUG -fexceptions")
     SET(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_C_FLAGS_DEBUG})
     SET(CMAKE_C_FLAGS_RELEASE "-Ofast -pipe -flto -march=native -mtune=native -funroll-loops -fno-stack-protector -DNDEBUG")
     SET(CMAKE_CXX_FLAGS_RELEASE ${CMAKE_C_FLAGS_RELEASE})
@@ -84,6 +84,9 @@ TARGET_COMPILE_DEFINITIONS(spectre-full PRIVATE SPECTRAL=1)
 ADD_EXECUTABLE(spectre-rgb src/main.cpp ${spectre_core_sources})
 TARGET_LINK_LIBRARIES(spectre-rgb ${CMAKE_THREAD_LIBS_INIT})
 
+#PRINTING COMPILER INFO IS ABSOLUTELY NECESSARY
+SET_PROPERTY(TARGET spectre-full spectre-rgb APPEND_STRING PROPERTY COMPILE_FLAGS " -DCOMPILER_NAME=\\\"${CMAKE_CXX_COMPILER_ID}\\\" -DCOMPILER_VERSION=\\\"${CMAKE_CXX_COMPILER_VERSION}\\\" ")
+
 #TESTING FRAMEWORK FOUND
 FIND_PACKAGE(GTest)
 IF(GTEST_FOUND)
@@ -94,6 +97,7 @@ IF(GTEST_FOUND)
     ADD_EXECUTABLE(runTests EXCLUDE_FROM_ALL ${CMAKE_CURRENT_SOURCE_DIR}/tests/allTests.cxx ${spectre_core_sources} ${spectre_test_sources})
     TARGET_LINK_LIBRARIES(runTests ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
     SET_TARGET_PROPERTIES(runTests PROPERTIES COMPILE_FLAGS " -DTESTS -DDEBUG -DTEST_ASSETS=\\\"${CMAKE_CURRENT_SOURCE_DIR}/tests/assets/\\\"")
+    SET_PROPERTY(TARGET runTests APPEND_STRING PROPERTY COMPILE_FLAGS " -DCOMPILER_NAME=\\\"${CMAKE_CXX_COMPILER_ID}\\\" -DCOMPILER_VERSION=\\\"${CMAKE_CXX_COMPILER_VERSION}\\\" ")
 ENDIF(GTEST_FOUND)
 
 #ADD TARGET TO PLOT SOME FANCY DISTRIBUTIONS
@@ -215,6 +219,5 @@ EXECUTE_PROCESS(
 )
 
 IF(${GIT_BRANCH_RETCODE} STREQUAL "0" AND ${GIT_COMMIT_HASH_RETCODE} STREQUAL "0" AND ${GIT_COMMIT_NO_RETCODE} STREQUAL "0")
-    SET_TARGET_PROPERTIES(spectre-full PROPERTIES COMPILE_FLAGS " -DGIT_BRANCH=\\\"${GIT_BRANCH}\\\" -DGIT_COMMIT_HASH=\\\"${GIT_COMMIT_HASH}\\\" -DGIT_COMMIT_NO=\\\"${GIT_COMMIT_NO}\\\" ")
-    SET_TARGET_PROPERTIES(spectre-rgb PROPERTIES COMPILE_FLAGS " -DGIT_BRANCH=\\\"${GIT_BRANCH}\\\" -DGIT_COMMIT_HASH=\\\"${GIT_COMMIT_HASH}\\\" -DGIT_COMMIT_NO=\\\"${GIT_COMMIT_NO}\\\" ")
+    SET_PROPERTY(TARGET spectre-full spectre-rgb APPEND_STRING PROPERTY COMPILE_FLAGS " -DGIT_BRANCH=\\\"${GIT_BRANCH}\\\" -DGIT_COMMIT_HASH=\\\"${GIT_COMMIT_HASH}\\\" -DGIT_COMMIT_NO=\\\"${GIT_COMMIT_NO}\\\" ")
 ENDIF()
