--- a/visualstudio/tests.vcxproj
+++ b/visualstudio/tests.vcxproj
@@ -70,7 +70,10 @@
     <ClCompile Include="..\src\geometry\vec3.cpp" />
     <ClCompile Include="..\src\integrators\path_tracer.cpp" />
     <ClCompile Include="..\src\integrators\ray_tracer.cpp" />
-    <ClCompile Include="..\src\lights\area_light.cpp" />
+    <ClCompile Include="..\src\lights\light.cpp" />
+    <ClCompile Include="..\src\lights\light_area.cpp" />
+    <ClCompile Include="..\src\lights\light_omni.cpp" />
+    <ClCompile Include="..\src\lights\light_spot.cpp" />
     <ClCompile Include="..\src\materials\bdf.cpp" />
     <ClCompile Include="..\src\materials\bump.cpp" />
     <ClCompile Include="..\src\materials\dual.cpp" />
@@ -107,7 +110,6 @@
     <ClCompile Include="..\src\samplers\sampler_stratified.cpp" />
     <ClCompile Include="..\src\textures\image_map.cpp" />
     <ClCompile Include="..\src\textures\mask_boolean.cpp" />
-    <ClCompile Include="..\src\textures\texture.cpp" />
     <ClCompile Include="..\src\textures\texture_image.cpp" />
     <ClCompile Include="..\src\textures\texture_library.cpp" />
     <ClCompile Include="..\src\textures\texture_normal.cpp" />
@@ -175,7 +177,10 @@
     <ClInclude Include="..\src\geometry\ray.hpp" />
     <ClInclude Include="..\src\geometry\vec2.hpp" />
     <ClInclude Include="..\src\geometry\vec3.hpp" />
-    <ClInclude Include="..\src\lights\area_light.hpp" />
+    <ClInclude Include="..\src\lights\light.hpp" />
+    <ClInclude Include="..\src\lights\light_area.hpp" />
+    <ClInclude Include="..\src\lights\light_omni.hpp" />
+    <ClInclude Include="..\src\lights\light_spot.hpp" />
     <ClInclude Include="..\src\materials\bdf.hpp" />
     <ClInclude Include="..\src\materials\bsdf.hpp" />
     <ClInclude Include="..\src\materials\bump.hpp" />
