--- a/visualstudio/tests.vcxproj.filters
+++ b/visualstudio/tests.vcxproj.filters
@@ -147,9 +147,6 @@
     <ClCompile Include="..\tests\unit-testing\texturelibrary_tests.cpp">
       <Filter>tests</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\textures\texture.cpp">
-      <Filter>sources</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\textures\texture_library.cpp">
       <Filter>sources</Filter>
     </ClCompile>
@@ -169,9 +166,6 @@
       <Filter>sources</Filter>
     </ClCompile>
     <ClCompile Include="..\src\primitives\triangle.cpp">
-      <Filter>sources</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\lights\area_light.cpp">
       <Filter>sources</Filter>
     </ClCompile>
     <ClCompile Include="..\tests\unit-testing\asset_tests.cpp">
@@ -324,6 +318,18 @@
     <ClCompile Include="..\src\primitives\hit_point.cpp">
       <Filter>sources</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\lights\light.cpp">
+      <Filter>sources</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\lights\light_area.cpp">
+      <Filter>sources</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\lights\light_omni.cpp">
+      <Filter>sources</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\lights\light_spot.cpp">
+      <Filter>sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\tests\unit-testing\spectre_tests.h">
@@ -452,9 +458,6 @@
     <ClInclude Include="..\src\primitives\triangle.hpp">
       <Filter>sources</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\lights\area_light.hpp">
-      <Filter>sources</Filter>
-    </ClInclude>
     <ClInclude Include="..\src\accelerators\bvh.hpp">
       <Filter>sources</Filter>
     </ClInclude>
@@ -543,6 +546,18 @@
       <Filter>sources</Filter>
     </ClInclude>
     <ClInclude Include="..\src\primitives\hit_point.hpp">
+      <Filter>sources</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\lights\light.hpp">
+      <Filter>sources</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\lights\light_area.hpp">
+      <Filter>sources</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\lights\light_omni.hpp">
+      <Filter>sources</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\lights\light_spot.hpp">
       <Filter>sources</Filter>
     </ClInclude>
   </ItemGroup>
