--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,8 +130,8 @@ ENDIF(GNUPLOT_FOUND)
 FIND_PACKAGE(JPEG)
 IF(JPEG_FOUND)
     INCLUDE_DIRECTORIES(${JPEG_INCLUDE_DIR})
-    TARGET_SOURCES(spectre-full PUBLIC src/utility/imageio/io_jpg.c)
-    TARGET_SOURCES(spectre-rgb PUBLIC src/utility/imageio/io_jpg.c)
+    TARGET_SOURCES(spectre-full PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/utility/imageio/io_jpg.c)
+    TARGET_SOURCES(spectre-rgb PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/utility/imageio/io_jpg.c)
     SET_PROPERTY(SOURCE src/utility/imageio/imageio.c APPEND_STRING PROPERTY
                  COMPILE_FLAGS " -DJPEG_FOUND ")
     TARGET_LINK_LIBRARIES(spectre-full ${JPEG_LIBRARIES})
@@ -141,11 +141,11 @@ IF(JPEG_FOUND)
                      PROPERTY COMPILE_FLAGS " -DJPEG_FOUND ")
         SET_PROPERTY(SOURCE tests/unit-testing/imagefilm_tests.cpp APPEND_STRING
                      PROPERTY COMPILE_FLAGS " -DJPEG_FOUND ")
-        TARGET_SOURCES(runTests PUBLIC src/utility/imageio/io_jpg.c)
+                   TARGET_SOURCES(runTests PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/utility/imageio/io_jpg.c)
         TARGET_LINK_LIBRARIES(runTests ${JPEG_LIBRARIES})
     ENDIF(GTEST_FOUND)
     IF(GNUPLOT_FOUND)
-        TARGET_SOURCES(distributions_data PUBLIC src/utility/imageio/io_jpg.c)
+      TARGET_SOURCES(distributions_data PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/utility/imageio/io_jpg.c)
         TARGET_LINK_LIBRARIES(distributions_data ${JPEG_LIBRARIES})
     ENDIF(GNUPLOT_FOUND)
 ENDIF(JPEG_FOUND)
@@ -154,8 +154,8 @@ ENDIF(JPEG_FOUND)
 FIND_PACKAGE(PNG)
 IF(PNG_FOUND)
     INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})
-    TARGET_SOURCES(spectre-full PUBLIC src/utility/imageio/io_png.c)
-    TARGET_SOURCES(spectre-rgb PUBLIC src/utility/imageio/io_png.c)
+    TARGET_SOURCES(spectre-full PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/utility/imageio/io_png.c)
+    TARGET_SOURCES(spectre-rgb PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/utility/imageio/io_png.c)
     SET_PROPERTY(SOURCE src/utility/imageio/imageio.c APPEND_STRING PROPERTY
                  COMPILE_FLAGS " -DPNG_FOUND ")
     TARGET_LINK_LIBRARIES(spectre-full ${PNG_LIBRARIES})
@@ -165,11 +165,11 @@ IF(PNG_FOUND)
                      PROPERTY COMPILE_FLAGS " -DPNG_FOUND ")
         SET_PROPERTY(SOURCE tests/unit-testing/imagefilm_tests.cpp APPEND_STRING
                      PROPERTY COMPILE_FLAGS " -DPNG_FOUND ")
-        TARGET_SOURCES(runTests PUBLIC src/utility/imageio/io_png.c)
+                   TARGET_SOURCES(runTests PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/utility/imageio/io_png.c)
         TARGET_LINK_LIBRARIES(runTests ${PNG_LIBRARIES})
     ENDIF(GTEST_FOUND)
     IF(GNUPLOT_FOUND)
-        TARGET_SOURCES(distributions_data PUBLIC src/utility/imageio/io_png.c)
+      TARGET_SOURCES(distributions_data PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/utility/imageio/io_png.c)
         TARGET_LINK_LIBRARIES(distributions_data ${PNG_LIBRARIES})
     ENDIF(GNUPLOT_FOUND)
 ENDIF(PNG_FOUND)
@@ -178,8 +178,8 @@ ENDIF(PNG_FOUND)
 FIND_PACKAGE(TIFF)
 IF(TIFF_FOUND)
     INCLUDE_DIRECTORIES(${TIFF_INCLUDE_DIR})
-    TARGET_SOURCES(spectre-full PUBLIC src/utility/imageio/io_tiff.c)
-    TARGET_SOURCES(spectre-rgb PUBLIC src/utility/imageio/io_tiff.c)
+    TARGET_SOURCES(spectre-full PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/utility/imageio/io_tiff.c)
+    TARGET_SOURCES(spectre-rgb PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/utility/imageio/io_tiff.c)
     SET_PROPERTY(SOURCE src/utility/imageio/imageio.c APPEND_STRING PROPERTY
                  COMPILE_FLAGS " -DTIFF_FOUND ")
     TARGET_LINK_LIBRARIES(spectre-full ${TIFF_LIBRARIES})
@@ -189,11 +189,11 @@ IF(TIFF_FOUND)
                      PROPERTY COMPILE_FLAGS " -DTIFF_FOUND ")
         SET_PROPERTY(SOURCE tests/unit-testing/imagefilm_tests.cpp APPEND_STRING
                      PROPERTY COMPILE_FLAGS " -DTIFF_FOUND ")
-        TARGET_SOURCES(runTests PUBLIC src/utility/imageio/io_tiff.c)
+                   TARGET_SOURCES(runTests PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/utility/imageio/io_tiff.c)
         TARGET_LINK_LIBRARIES(runTests ${TIFF_LIBRARIES})
     ENDIF(GTEST_FOUND)
     IF(GNUPLOT_FOUND)
-        TARGET_SOURCES(distributions_data PUBLIC src/utility/imageio/io_tiff.c)
+      TARGET_SOURCES(distributions_data PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src/utility/imageio/io_tiff.c)
         TARGET_LINK_LIBRARIES(distributions_data ${TIFF_LIBRARIES})
     ENDIF(GNUPLOT_FOUND)
 ENDIF(TIFF_FOUND)
